--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,24 @@ h1 {
   color: #4ECCA3;
 }
 
+.tombol{
+  background-color: #4ECCA3;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+  font-family: 'Lobster', cursive;
+  border-radius: 10%;
+  margin-top: 2.5%;
+}
+.tombol:hover{
+  opacity: 0.7;
+  cursor:pointer;
+}
+
 p {
   font-size: 2rem;
   color: #4ECCA3;
@@ -33,9 +51,10 @@ img {
 }
 
 footer {
-  margin-top: 5%;
+  margin-top: 3%;
   color: #EEEEEE;
   text-align: center;
   font-family: 'Indie Flower', cursive;
 
 }
+
